# SmartText

./: README.md  pyproject.toml  structure.txt
.github/workflows/: windows-installer.yml
src/: structure.txt
src/smarttext/: __main__.py  app.py  main.py
src/smarttext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/smarttext/bridge/: app_controller.py  session_store.py  single_instance.py  tabs_model.py
src/smarttext/core/: document.py  settings_store.py
src/smarttext/qml/: Main.qml  SettingsWindow.qml
src/smarttext/qml/components/: CircleIconButton.qml  RoundButton.qml  TitleBar.qml  themes.js
