[project]
name = "smarttext"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6"
]

# GUI entry point (NO console window on Windows)
[project.gui-scripts]
smarttext = "smarttext.main:main"

# Optional console entry (useful for debugging)
[project.scripts]
smarttext-console = "smarttext.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

# Include ALL QML + icon assets in the package
[tool.setuptools.package-data]
smarttext = [
  "qml/*.qml",
  "qml/components/*.qml",
  "qml/icons/*.svg"
]
